--- a/src/App.css
+++ b/src/App.css
@@ -43,13 +43,13 @@ body {
   color: #475569;
   font-size: 42px;
   font-family: 'Roboto';
-  font-size: bold;
+  font-weight: bold;
   margin-bottom: 7px;
 }
 .para {
   color: #475569;
   font-size: 20px;
-  font-weight: 'Robotp';
+  font-family: 'Roboto';
 }
 .app-con {
   list-style-type: none;
